# will-it-rain-testing

./: .env-example  README.md  baseline_forecast.py  baseline_persistence.py  create_labels_from_rainfall.py  fetch_actual_rainfall.py  fetch_forecast.py  infer.py  main.py  plot_results.py  pyproject.toml  train_lightgbm.py
