[project]
name = "will-it-rain-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "openmeteo-sdk>=1.26.0",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.1",
    "requests>=2.33.1",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.8.0",
]
